<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/publish_text"
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/publish_path"
    />
    <EditText
    	android:id="@+id/publish_path"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="device/display"              
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/publish_key"
    />
    <EditText
    	android:id="@+id/publish_key"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:text="resolution"            
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/publish_value"
    />
    <EditText
    	android:id="@+id/publish_value"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"    
        android:text="320*480"           
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/publish_type"
    />
    <Spinner 
        android:id="@+id/publish_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/publish_type"
    />
            
    <Button 
    	android:id="@+id/publish_button"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" 
        android:text="@string/publish_button"      
    />
</LinearLayout>
</ScrollView>