<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/subscribe_text"
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/subscribe_user"
    />
    <EditText
    	android:id="@+id/subscribe_user"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="clientX@robert-pc"              
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/subscribe_node"
    />
    <EditText
    	android:id="@+id/subscribe_node"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:text="tune"            
    />
    
    <Button 
    	android:id="@+id/subscribe_button"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" 
        android:text="@string/subscribe_button" 
        android:drawableLeft ="@android:drawable/ic_menu_add"     
    />
    
    <Button 
    	android:id="@+id/unsubscribe_button"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" 
        android:text="@string/unsubscribe_button" 
        android:drawableLeft ="@android:drawable/ic_menu_close_clear_cancel"     
    />
</LinearLayout>
</ScrollView>