<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2010 Technische Universität Dresden
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
  	http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  
  Dresden, University of Technology, Faculty of Computer Science
  Computer Networks Group: http://www.rn.inf.tu-dresden.de
  mobilis project: http://mobilisplatform.sourceforge.net
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_publish" android:title="@string/menu_publish"
		android:menuCategory="secondary" android:icon="@android:drawable/ic_menu_share"></item>
	<item android:id="@+id/menu_subscribe" android:title="@string/menu_subscribe"
		android:menuCategory="secondary" android:icon="@drawable/ic_menu_view"></item>	
	<item android:id="@+id/menu_pref" android:title="@string/menu_pref"
		android:menuCategory="secondary" android:icon="@android:drawable/ic_menu_preferences"></item>
	<item android:id="@+id/menu_pref_xmpp" android:title="@string/menu_pref_xmpp"
		android:menuCategory="secondary" android:icon="@drawable/menu_pref_xmpp"></item>	
	</menu>
