<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/mood_spinner_label"
    />
    <Spinner 
        android:id="@+id/mood_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/mood_spinner_label"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/mood_text_label"
    />
    <EditText
    	android:id="@+id/mood_text"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"              
        />
    <Button 
    	android:id="@+id/mood_button"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" 
        android:text="@string/mood_button_publish"      
    />
</LinearLayout>